--- a/app.cfg
+++ b/app.cfg
@@ -7,7 +7,7 @@ CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, TMIN_APP_TPRI + 1, STACK_SIZE, NULL }
 }
 
 ATT_MOD("app.o");
-
+ATT_MOD("cli_main.o");
 ATT_MOD("cli_menu.o");
 ATT_MOD("utils.o");
 ATT_MOD("motor.o");
