--- a/app.cfg
+++ b/app.cfg
@@ -4,6 +4,7 @@ INCLUDE("app_common.cfg");
 
 DOMAIN(TDOM_APP) {
 CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, TMIN_APP_TPRI + 1, STACK_SIZE, NULL });
+EV3_CRE_CYC(EV3_UPDATE_COUNTER, { TA_NULL, 1, update_counter, 1000, 0 });
 }
 
 ATT_MOD("app.o");
@@ -11,3 +12,5 @@ ATT_MOD("cli_main.o");
 ATT_MOD("cli_menu.o");
 ATT_MOD("utils.o");
 ATT_MOD("motor.o");
+ATT_MOD("bignumber.o");
+ATT_MOD("seconds_counter.o");
